plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.12'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'com.google.cloud.tools.jib' version '3.2.0'
//    ##  querydsl 플러그인 방식
    id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
}

group = 'com.challenge'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
//    ## queryDSL 설정
    querydsl.extendsFrom compileClasspath
}

repositories {
    mavenCentral()
}

jib {
    from {
        image = 'openjdk:11.0.11-jre-slim'
    }
    to {
        image = 'chat-challenge'
        tags = ['0.5']
    }
    container {
        mainClass = 'com.challenge.chat.ChatApplication'
        creationTime = 'USE_CURRENT_TIMESTAMP'
        jvmFlags = ['-Dspring.profiles.active=dev']
        format = 'OCI'
        volumes = ['/var/temp']
//        entrypoint = ['java', '-cp', '/app/resources:/app/classes:/app/libs/*'
//        , 'com.challenge.chat.ChatApplication']
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.projectlombok:lombok:1.18.26'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'com.auth0:java-jwt:4.2.1'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
    runtimeOnly 'com.h2database:h2'

    implementation 'org.webjars:stomp-websocket:2.3.3'

    //mysql
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.apache.kafka:kafka-clients'
    testImplementation 'org.springframework.kafka:spring-kafka-test'

    //Prometheus
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-core'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Elasticsearch
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

//    ## querydsl 디펜던시 추가
    implementation 'com.querydsl:querydsl-jpa:5.0.0'
    implementation 'com.querydsl:querydsl-apt:5.0.0'
}

tasks.named('test') {
    useJUnitPlatform()
}


//## 하위 queryDSL 관련 설정
def querydslDir =  "src/main/generated"

querydsl {
    library = "com.querydsl:querydsl-apt"
    jpa = true
    querydslDefault = true
    querydslSourcesDir = querydslDir
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java', querydslDir]
        }
    }
}

compileQuerydsl {
    options.annotationProcessorPath = configurations.querydsl
}